test/spec_vectors/block/fail/module_89.wat
(module (func $type-break-partial-vs-nums (result i32 i32) (i32.const 1) (block (result i32 i32) (br 0 (i32.const 0)) (i32.const 2))))